[gd_scene load_steps=6 format=2]

[ext_resource path="res://GamePreferences.gd" type="Script" id=1]
[ext_resource path="res://gfx/ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://gfx/ui/menu.svg" type="Texture" id=3]
[ext_resource path="res://gfx/ui/menu_hover.svg" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource_name = "show_panel"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("gameOptionsPanel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gameOptionsPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GamePreferences" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Theme" ]

[node name="gameOptionsPanel" type="PopupPanel" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 400.0
margin_bottom = -46.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
popup_exclusive = false
_sections_unfolded = [ "Margin", "Popup", "Theme", "Visibility", "custom_styles" ]

[node name="VBoxContainer" type="VBoxContainer" parent="gameOptionsPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="ScrollContainer" type="ScrollContainer" parent="gameOptionsPanel/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 380.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 3
scroll_horizontal = false
scroll_vertical = true
_sections_unfolded = [ "Scroll", "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="gameOptionsPanel/VBoxContainer/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 380.0
margin_bottom = 504.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect", "Size Flags", "Visibility" ]

[node name="selectGame" type="OptionButton" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 356.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]
_sections_unfolded = [ "Rect", "custom_colors", "custom_constants", "custom_fonts", "custom_icons", "custom_styles" ]

[node name="buttonRestartMap" type="Button" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 356.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "reload map"
flat = false
align = 0
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="buttonResetProgress" type="Button" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 356.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "reset progress"
flat = false
align = 0
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="HSeparator" type="HSeparator" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 356.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="labelSliderVolume" type="Label" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 178.0
margin_right = 356.0
margin_bottom = 218.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "general volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="sliderVolume" type="HSlider" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 226.0
margin_right = 356.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2
_sections_unfolded = [ "custom_icons", "custom_styles" ]

[node name="labelSliderSFXVolume" type="Label" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 266.0
margin_right = 356.0
margin_bottom = 306.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "effect volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="sliderSFXVolume" type="HSlider" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 314.0
margin_right = 356.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2
_sections_unfolded = [ "custom_icons" ]

[node name="labelSliderMusicVolume" type="Label" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 354.0
margin_right = 356.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "music volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="sliderMusicVolume" type="HSlider" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 402.0
margin_right = 356.0
margin_bottom = 434.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2
_sections_unfolded = [ "custom_icons" ]

[node name="HSeparator2" type="HSeparator" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 442.0
margin_right = 356.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="toggleFullscreen" type="CheckBox" parent="gameOptionsPanel/VBoxContainer/ScrollContainer/VBoxContainer" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 458.0
margin_right = 356.0
margin_bottom = 504.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "fullscreen"
flat = false
align = 0

[node name="buttonExit" type="Button" parent="gameOptionsPanel/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 488.0
margin_right = 380.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "exit"
flat = false
align = 0
_sections_unfolded = [ "Margin" ]

[node name="buttonGameOptions" type="TextureButton" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -45.0
margin_right = 45.0
margin_bottom = -5.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 4
_sections_unfolded = [ "Margin", "Material", "Rect", "Textures", "Theme", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/show_panel = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


